# connections

./: .gitignore  CMakeLists.txt
asset/: Board.qml  BoardRow.qml  Segment.qml
source/: CMakeLists.txt
source/app/: AIPlayerWorker.cpp  AIPlayerWorker.hpp  GameBoardWidget.cpp  GameBoardWidget.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
source/game/: GameBoard.cpp  GameBoard.hpp  GameTypes.hpp  GraphGen.cpp  GraphGen.hpp  MinMaxAgent.cpp  MinMaxAgent.hpp
tests/: CMakeLists.txt  main.cpp  test_GameBoard.cpp  test_GraphGen.cpp  test_MinMaxAgent.cpp  test_util.cpp  test_util.hpp
